kubernetes/apps/media/base/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      nodeSelector:
        stack.arr: "arr-1"
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      dnsPolicy: ClusterFirst
      containers:
        - name: sonarr
          image: linuxserver/sonarr:4.0.20@sha256:f247545d23ba8b233d6604575347e48a623fe6ad75dda02348bf81917f3b5c06
          ports:
            - containerPort: 8989
              name: http
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: "1.5Gi"
              cpu: "1000m"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: videos
              mountPath: /mnt/media/videos/shows
              subPath: videos/shows
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-pvc
        - name: videos
          persistentVolumeClaim:
            claimName: media-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: qbit-download
